fixed header z-index to avoid about-img going over header

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 100%;
+  z-index: 1000;
 }
 .logo{
   font-size: 25px;
@@ -128,6 +128,7 @@ span{
   gap: 10em;
   padding: 12% 8%;
   background: black;
+  z-index: 1;
 }
 
 .about-img img{
